[package]
name = "leo"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_xorshift = "0.3.0"
statrs = "0.16.0"
rand_distr = "0.4.3"
rayon = "1.5.1"
getopts = "0.2"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
concurrent-queue = "1.2.4"
parking_lot = "0.12.1"
[dependencies.nncombinator]
path = "../nncombinator"
[dependencies.csaparser]
path = "../CsaParser"
[dependencies.packedsfen]
path = "../packedsfen"
[dependencies.usiagent]
path = "../USIAgent"
[dependencies.concurrent-fixed-hashmap]
path = "../concurrent_fixed_hashmap"

